gc types translate and update